# RemezGeneral

./: .gitignore  CMakeLists.txt  Makefile  Point.cpp  Polynomial.cpp  README.md  Remez.cpp  RemezGeneral.cpp  func.cpp  main.cpp
includes/: Polynomial.h  Remez.h  RemezArcsin.h  RemezCos.h  RemezDirect.h  RemezGeneral.h  RemezGeneralArcsin.h  RemezGeneralCos.h  RemezGeneralDirect.h  RemezGeneralGelu.h  RemezGeneralTanh.h  RemezParam.h  func.h
